# owl-esp

components/owl/: CMakeLists.txt
port/: impl.c  owl.h
port/fakesys/: endian.h
port/fakesys/net/: ethernet.h
port/fakesys/netinet/: ether.h  ip6.h
src/: rx.c  state.c  tx.c
